fix(app): bottomButtons z-index

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  position: relative;
+  z-index: 1000;
 }
 
 .inputBox {
